@@ -202,6 +202,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6975: os.path.realpath() now correctly resolves multiple nested
+  symlinks on POSIX platforms.
+
 - Issue #17156: pygettext.py now correctly escapes non-ascii characters.
 
 - Issue #7358: cStringIO.StringIO now supports writing to and reading from
